--- a/test.html
+++ b/test.html
@@ -1,21 +1,3 @@
-<?php
-
-/*
-	$currentDate = time ();
-	$startOfCareerDate = mktime( 0, 0, 0, 1, 1, 2001 );
-
-	$differenceOfDates = $currentDate - $startOfCareerDate;
-	$differenceExpressedAsYears = floor ( $differenceOfDates / ( 60 * 60 * 24 * 365 ) );
- */
-
-$urlPath =
-	( !empty( $_SERVER[ "HTTPS" ] )
-		&& $_SERVER[ "HTTPS" ] == "on"
-			? "https://"
-			: "http://" )
-	. $_SERVER[ "SERVER_NAME" ];
-
-?>
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -25,13 +7,13 @@ $urlPath =
 		<meta content="Matthew Choinski" name="author">
 		<meta content="Matthew Choinski, Matt Choinski, Freelance, Freelance Web Developer, Web Developer, Open Source, LAMP, Linux, Apache, MySQL, PHP, Python, jQuery" name="keywords">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="<?php echo( $urlPath ); ?>/include/style/screen.min.css" media="screen" rel="stylesheet">
+		<link href="./include/style/screen.min.css" media="screen" rel="stylesheet">
 		<!--[if lt IE 9]>
-		<link href="<?php echo( $urlPath ); ?>/include/style/screen_ie.min.css" media="screen" rel="stylesheet">
+		<link href="./include/style/screen_ie.min.css" media="screen" rel="stylesheet">
 		<![endif]-->
     <title>Matthew Choinski - Web Developer in Baltimore, Maryland Specializing in Open Source and Microsoft Technologies.</title>
 		<!--[if lt IE 9]>
-		<script src="<?php echo( $urlPath ); ?>/include/script/html5shim.js"></script>
+		<script src="./include/script/html5shim.js"></script>
 		<![endif]-->
 	</head>
 <?php flush(); ?>
@@ -65,16 +47,7 @@ $urlPath =
 				<p>&nbsp;</p>
 			</section>
 		</footer>
-		<script src="<?php echo( $urlPath ); ?>/include/script/jquery.min.js"></script>
-		<script src="<?php echo( $urlPath ); ?>/include/script/script.min.js" type="text/javascript"></script>
-		<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-12259620-1', 'choinski.net');
-ga('send', 'pageview');
-		</script>
+		<script src="./include/script/jquery.min.js"></script>
+		<script src="./include/script/script.min.js" type="text/javascript"></script>
 	</body>
 </html>
